# pbv2

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  justfile  package.json
.claude/: settings.local.json
client/: env.d.ts  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: App.vue
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: commands.rs  lib.rs
client/src/shared/: api.ts  index.ts
client/src/shared/components/: CategoriesView.vue  ProblemDetailView.vue  ProblemEditor.vue  ProblemGroupView.vue  ProblemsListView.vue  QuestionView.vue
importer/: db_models.py  doc_extractor.py  hello.py  llm.py  main.py  ocr.py  package.json  pipeline.py  prompt.txt  publisher.py  pyproject.toml  schema.py  store.py
importer/.claude/: settings.local.json
migrations/: 0001_initial.sql  0002_problems.sql  0003_meta.sql  0004_seed_grade12.sql  0005_fix.sql  0005_remove_question_series.sql
proto/: Cargo.toml  build.rs  pbv2.proto
proto/src/: lib.rs
schema/: Cargo.toml
schema/src/: lib.rs
schema/src/db/: mod.rs  models.rs  types.rs
schema/src/engines/: builtin.rs  mod.rs  xelatex.rs
schema/src/latex/: builder.rs  mod.rs
schema/src/preambles/: document.tex  preamble.tex
schema/src/schema/: mod.rs  paragraph.rs  renderer.rs
schema/src/schema/elements/: blank.rs  choice.rs  compiled.rs  element.rs  image.rs  list.rs  listings.rs  mod.rs  si.rs  table.rs  text.rs
schema/src/schema/papers/: cirriculum.rs  mod.rs  paper.rs
schema/src/schema/problems/: category.rs  mod.rs  problem.rs  question.rs  question_block.rs
schema/src/schema/utils/: mod.rs  svg.rs
scripts/: compile_proto.py
