[package]
name = "schema"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
bitflags = { version = "2.11.0", features = ["std", "serde"] }
hex = "0.4.3"
hex-literal = "1.1.0"
math-core = "0.5.2"
resvg = "0.47.0"
rkyv = "0.8.15"
serde = { version = "1.0.228", features = ["derive"] }
sha1 = "0.10.6"
temp-dir = "0.2.0"
tiny-skia = "0.12.0"
tokio = { version = "1.49.0", features = ["full"] }
usvg = "0.47.0"
